# WCL_DK_Analyzer

./: .gitignore  README.md  compose.yml
.github/workflows/: build-docker.yml  deploy-extensions.yml  deploy.yml  discord_webhook.yml  pr-checks.yml
backend/: Dockerfile.dev  Makefile  deploy.sh  pyproject.toml
backend/src/: api.py  client.py  report.py
backend/src/analysis/: analyze.py  base.py  core_analysis.py  frost_analysis.py  items.py  unholy_analysis.py
extensions/: deploy.sh
extensions/src/: content.js  manifest.json
frontend/: Dockerfile.dev  Makefile  deploy.sh  index.html  package-lock.json
frontend/src/: Analysis.jsx  App.scss  ArmyAnalysis.jsx  ArmyDynamicAnalysis.jsx  DarkTransformationAnalysis.jsx  GargoyleAnalysis.jsx  GhoulAnalysis.jsx  OutbreakAnalysis.jsx  RaiseDeadAnalysis.jsx  SoulReaperAnalysis.jsx  Tabs.jsx  constants.js  helpers.jsx  tabs.css
